app/javascript/stylesheets/select2-tailwind.scss
@tailwind components;

@layer components {
  .select2-container {
    @apply w-full;
  }

  .select2-selection--single {
    @apply border-gray-300 rounded-md shadow-sm #{!important};
    outline-color: #5897fb;
    padding-top: 2px;
    height: 36px !important;

    .select2-selection__arrow {
      height: 32px !important;
    }

    .select2-selection__rendered {
      @apply text-gray-500 #{!important};
    }
  }

  .select2-container--open {
    .select2-selection--single {
      @apply border-2 #{!important};
      border-color: #5897fb !important;
      padding-top: 1px;
    }
  }

  .select2-container .select2-dropdown {
    @apply border-2 border-gray-300 shadow-sm overflow-hidden -mt-px #{!important};
    border-color: #5897fb !important;
  }

  .select2-container--default .select2-results__option[aria-selected=true] {
    background-color: #047bf8 !important;
    color: white;
  }

  .select2-search__field {
    @apply border-gray-300 rounded-md #{!important};

    &:focus {
      border-color: #5897fb !important;
    }
  }
}

